--- a/pde-visualizer-frontend/package.json
+++ b/pde-visualizer-frontend/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "katex": "^0.16.9",
     "next": "14.0.4",
     "plotly.js": "^2.27.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-katex": "^3.0.1",
     "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
@@ -20,6 +22,7 @@
     "@types/plotly.js": "^2.12.31",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-katex": "^3.0.4",
     "@types/react-plotly.js": "^2.6.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
